# cpp-cmake-template

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: project.hpp
include/project/: vec2.hpp
test/: CMakeLists.txt  example_test.cpp
